// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataList /> with data: an empty object should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  />
</DocumentFragment>
`;

exports[`<DataList /> with data: value and defaultValue: a string should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  >
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Name
      </dt>
      <dd
        class="data-list-value"
      >
        Kevin Flynn
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Description
      </dt>
      <dd
        class="data-list-value"
      >
        unknown
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`<DataList /> with data: value and defaultValue: an element should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  >
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Name
      </dt>
      <dd
        class="data-list-value"
      >
        Kevin Flynn
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Description
      </dt>
      <dd
        class="data-list-value"
      >
        <em>
          unknown
        </em>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`<DataList /> with data: value should match the snapshot 1`] = `
<DocumentFragment>
  <dl
    class="data-list"
  >
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Name
      </dt>
      <dd
        class="data-list-value"
      >
        Kevin Flynn
      </dd>
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Description
      </dt>
      <dd
        class="data-list-value"
      />
    </div>
    <div
      class="data-list-item"
    >
      <dt
        class="data-list-label"
      >
        Role
      </dt>
      <dd
        class="data-list-value"
      >
        <span
          class="role"
        >
          User
        </span>
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
